feat(job): implement job laravel using mail
